Initially hide a proverb/grammar sentence behind a mask and reveal it if it is being typed correctly.

--- a/app/assets/scripts/components/WorkingArea.css
+++ b/app/assets/scripts/components/WorkingArea.css
@@ -42,10 +42,9 @@
 	width: 100%;
 	flex: 1;
 	box-sizing: border-box;
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
 	border: none;
 	border-top: 1px solid #d3d3d3;
+	border-bottom: 1px solid #d3d3d3;
 }
 .WorkingArea-navigation{
 	width: 70%;
